--- a/backend/templates/import_tool.html
+++ b/backend/templates/import_tool.html
@@ -42,6 +42,7 @@
 		<div class="center clearfix">
 			<h5><a href="/">Instaright - Perfect information for you in realtime.</a></h5>
                 <ul class="menu borderless clearfix"> 
+			<li><a href="/category" title="Instaright most populat category list"><span>Categories</span></a></li>
 			<li><a href="/tools" title="Instaright tools"><span>Tools</span></a></li>
                         {% if user %}
 			<li><a href="javascript:alert('Dashboard soon available!');"><span>{{ user }}</span></a></li>
