--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -6,8 +6,9 @@
                 <meta name="keywords" content="Instaright, social bookmark, social bookmarking, social recommendation, Instapaper firefox, Instapaper for firefox, instapaper import delicious, import delicious bookmarks, instapaper delicious, delicious importer, export delicious bookmarks to instapaper, instapaper addon for firefox, instapaper add-on firefox, instapaper add-on, social bookmark, read it later" />
 		<meta name="title" content="Instaright Social Bookmarking and recommendation app" />
                 <link rel="stylesheet" type="text/css" href="css/style.css" />
-                <script src="http://www.google.com/jsapi?key=AIzaSyDu78p4P0qEe3CTU4GssVBz_crZemld_eg" type="text/javascript" charset="utf-8"></script>
-                <script src='static/javascript/channel.js'></script>
+                <!--script src="http://www.google.com/jsapi?key=AIzaSyDu78p4P0qEe3CTU4GssVBz_crZemld_eg" type="text/javascript" charset="utf-8"></script>
+                <script src='static/javascript/channel.js'></script-->
+		<script type="text/javascript" src="/_ah/channel/jsapi"></script>
                 <script src='static/javascript/invite.js'></script>
                 <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
                 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
@@ -44,158 +45,153 @@
 			});
 		});
 		</script>
-    <div id="fb-root"></div>
-    <script>
-      window.fbAsyncInit = function() {
-        FB.init({appId: '180962951948062', status: true, cookie: true,
-                 xfbml: true});
-      };
-      (function() {
-        var e = document.createElement('script');
-        e.type = 'text/javascript';
-        e.src = document.location.protocol + '//connect.facebook.net/en_US/all.js';
-        e.async = true;
-        document.getElementById('fb-root').appendChild(e);
-      }());
-    </script>
-                 <script type="text/javascript" charset="utf-8">
-                         if( !window.XMLHttpRequest ) XMLHttpRequest = function()
-{
-        try{ return new ActiveXObject("Msxml2.XMLHTTP.6.0") }catch(e){}
-        try{ return new ActiveXObject("Msxml2.XMLHTTP.3.0") }catch(e){}
-        try{ return new ActiveXObject("Msxml2.XMLHTTP") }catch(e){}
-        try{ return new ActiveXObject("Microsoft.XMLHTTP") }catch(e){}
-        throw new Error("Could not find an XMLHttpRequest alternative.")
-};
-var channel_id= '{{ channel_id }}';
-var channel = new goog.appengine.Channel(channel_id);
-var socket = channel.open();
-var maxElementsInStream=4;
-var maxHotLinks = 3;
-socket.onopen = function(){
-        //alert('connected');
-}
-socket.onmessage = function(evt){
-        try{
-                feed_json_update = JSON.parse(evt.data);
-                updateDisplayEntry(feed_json_update, stream);
-        } catch(e){
-                //alert('eee:'+e);
-        } 
-};
-
-
-$(document).ready(function(){
-		$("#invite_jid").bind('keypress', function(e){
-			if (e.keyCode == 13){
-			check_and_send_jid();
+                <script type="text/javascript" charset="utf-8">
+                         if( !window.XMLHttpRequest ) XMLHttpRequest = function(){
+        			try{ return new ActiveXObject("Msxml2.XMLHTTP.6.0") }catch(e){}
+        			try{ return new ActiveXObject("Msxml2.XMLHTTP.3.0") }catch(e){}
+        			try{ return new ActiveXObject("Msxml2.XMLHTTP") }catch(e){}
+        			try{ return new ActiveXObject("Microsoft.XMLHTTP") }catch(e){}
+        			throw new Error("Could not find an XMLHttpRequest alternative.")
+			};
+			var channel_id= '{{ channel_id }}';
+			var channel = new goog.appengine.Channel(channel_id);
+			var socket = channel.open();
+			var maxElementsInStream=4;
+			var maxHotLinks = 3;
+			socket.onopen = function(){
+				//alert('connected:{{ channel_id }}');
 			}
-			});
-		$("#invite_jid").focus(function(){
-			$(this).val("");
-			});
-		$.get('/feed?format=json', {}, updateDisplayEntry)
-		$("#jid_result").hide();
-		$("#invite_jid").focus();
-                });
+			socket.onmessage = function(evt){
+        			try{
+                			feed_json_update = JSON.parse(evt.data);
+                			updateDisplayEntry(feed_json_update, stream);
+        			} catch(e){
+         			        alert('eee:'+e);
+        			} 
+			};
+			socket.onclose= function(evt){
+				//alert('close:'+evt);
+			};
+			socket.onerror = function(evt){
+				//alert('error:'+JSON.parse(evt.data));
+			};
 
-// Create variables to display subscription options using HTML DIVs
+			$(document).ready(function(){
+				$("#invite_jid").bind('keypress', function(e){
+					if (e.keyCode == 13){
+					check_and_send_jid();
+					}
+				});
+				$("#invite_jid").focus(function(){
+					$(this).val("");
+				});
+				$.get('/feed?format=json', {}, updateDisplayEntry);
+				$("#jid_result").hide();
+				$("#invite_jid").focus();
+                	});
 
-var stream = document.getElementById('stream');
+			// Create variables to display subscription options using HTML DIVs
 
-// Initialize the API.
-var feed;
+			var stream = document.getElementById('stream');
 
-function updateDisplayEntry(response, div) {
-        try{
-                div = document.getElementById('stream');
-                for (i = response.length - 1; i >= 0; i--) {
-                        e = response[i]['u'];
-                        domain = e['d'];
-                        try{
-                                title=e['t'];
-                        }catch(e){
-                                title="Instaright article from domain "+domain;
-                        }
-                        if (title == null || title == 'None' || title == 'null' || title.length == 0){
-                                title="Instaright article from domain "+domain;
-                        } else {
-                                try{
-                                if ((title.charCodeAt(0) > 256 || title.charCodeAt(title.length/2) > 256)   && title.length >= 40){
-                                        title = title.substr(0,37) + ' ...';
-                                }
-                                else if (title.length >= 70){
-                                        title = title.substr(0,67) + ' ...';
-                                }
-                                } catch(e){
-                                }
-                        }
-                        link = e['l'];
-                        dateUpdated = new Date(e['u']);
-                        id = e['id'];
-			a = e['a'];
-                        original_url = e['ol'];
+			// Initialize the API.
+			var feed;
+			function updateDisplayEntry(response, div) {
+        			try{
+                			div = document.getElementById('stream');
+                			for (i = response.length - 1; i >= 0; i--) {
+                        			e = response[i]['u'];
+                        			domain = e['d'];
+                        			try{
+                                			title=e['t'];
+                        			}catch(e){
+                                			title="Instaright article from domain "+domain;
+                        			}
+                        			if (title == null || title == 'None' || title == 'null' || title.length == 0){
+                                			title="Instaright article from domain "+domain;
+                        			} else {
+                                			try{
+                                				if ((title.charCodeAt(0) > 256 || title.charCodeAt(title.length/2) > 256)   && title.length >= 40){
+                                        				title = title.substr(0,37) + ' ...';
+                                				}
+                                				else if (title.length >= 70){
+                                        				title = title.substr(0,67) + ' ...';
+                                				}
+                                			} catch(e){
+                                			}
+                        			}
+                        			link = e['l'];
+                        			dateUpdated = new Date(e['u']);
+                        			id = e['id'];
+						a = e['a'];
+						lc = e['lc'];
+						c=e['c']
+                        			original_url = e['ol'];
 
-                        container = document.createElement('div');
-                        containerAvatar = document.createElement('div');
+                        			container = document.createElement('div');
+                        			containerAvatar = document.createElement('div');
 
 
-                        avatarElement = document.createElement('img');
-                        avatarElement.setAttribute('src', a);
-                        avatarElement.setAttribute('class', 'avatar');
+                        			avatarElement = document.createElement('img');
+                        			avatarElement.setAttribute('src', a);
+                        			avatarElement.setAttribute('class', 'avatar');
 
-                        containerAvatar.appendChild(avatarElement);
-                        container.setAttribute('class', 'streamcontent');
-                        container.setAttribute('id', id);
+                        			containerAvatar.appendChild(avatarElement);
+                        			container.setAttribute('class', 'streamcontent');
+                        			container.setAttribute('id', id);
 
-                        titleElement = document.createElement('a');
-                        titleElement.innerHTML = title;
-                        if (original_url === undefined){
-                                titleElement.href = link;
-                        } else{
-                                // visibli link
-                                titleElement.href ='http://links.instaright.com/a947824b599193b3/?web=058421&dst='+original_url;
-                        }
-                        titleElement.target="_new"
-                        titleParagraph = document.createElement('p');
-                        titleParagraph.appendChild(titleElement);
+                        			titleElement = document.createElement('a');
+                        			titleElement.innerHTML = title;
+                        			if (original_url === undefined){
+                                			titleElement.href = link;
+                        			} else{
+                                			// visibli link
+                                			titleElement.href ='http://links.instaright.com/a947824b599193b3/?web=058421&dst='+original_url;
+                        			}
+                        			titleElement.target="_new"
+                        			titleParagraph = document.createElement('p');
+                        			titleParagraph.appendChild(titleElement);
 
-                        domainElement = document.createElement('a');
-                        domainElement.innerHTML = domain;
-                        domainElement.href = 'http://links.instaright.com/a947824b599193b3/?web=058421&dst='+'http://'+domain;
-                        domainElement.target="_new"
+                        			domainElement = document.createElement('a');
+                        			domainElement.innerHTML = domain;
+                        			domainElement.href = 'http://links.instaright.com/a947824b599193b3/?web=058421&dst='+'http://'+domain;
+                        			domainElement.target="_new"
 
-                        container.appendChild(containerAvatar);
-                        container.appendChild(titleParagraph);
-                        container.appendChild(document.createElement('br'));
-                        container.appendChild(domainElement);
-                        container.appendChild(document.createElement('br'));
+                        			container.appendChild(containerAvatar);
+                        			container.appendChild(titleParagraph);
+                        			container.appendChild(document.createElement('br'));
+                        			container.appendChild(domainElement);
+                        			container.appendChild(document.createElement('br'));
 
-                        contentParagraph = document.createElement('p');
-                        contentParagraph.innerHTML = dateUpdated;
+                        			contentParagraph = document.createElement('p');
+						if (typeof(lc) !== 'undefined' && lc != null && lc != 'None' && lc != 'null' && lc.length == 0 ){
+                        				contentParagraph.innerHTML = lc;
+						} else {
+                        				contentParagraph.innerHTML = dateUpdated;
+						}
 
-                        domainParagraph = document.createElement('p');
-                        domainParagraph.innerHTML = domainElement;
+                        			domainParagraph = document.createElement('p');
+                        			domainParagraph.innerHTML = domainElement;
 
-                        container.appendChild(contentParagraph);
+                        			container.appendChild(contentParagraph);
                        
-                        div.insertBefore(container, div.firstChild);
-                        $("#"+id).hide();
-                        $("#"+id).show('blind');
-                        sElements = $("#stream").children();
-                        if (sElements.length > maxElementsInStream ){
-                                lastElement = sElements.get(-1); 
-                                last_id = lastElement.getAttribute('id');
-                                //alert('id:'+ id);
-                                $("#"+last_id).hide();
-                                div.removeChild(lastElement)
-                        }
-                }
+                        			div.insertBefore(container, div.firstChild);
+                        			$("#"+id).hide();
+                        			$("#"+id).show('blind');
+                        			sElements = $("#stream").children();
+                        			if (sElements.length > maxElementsInStream ){
+                                			lastElement = sElements.get(-1); 
+                                			last_id = lastElement.getAttribute('id');
+                                			//alert('id:'+ id);
+                                			$("#"+last_id).hide();
+                                			div.removeChild(lastElement)
+                        			}
+                			}
 
-        }catch(e){
-                alert("while adding new element :" +e);
-        }
-}
+        			}catch(e){
+                			alert("while adding new element :" +e);
+        			}
+			}
 </script>
 
 
@@ -204,6 +200,7 @@ function updateDisplayEntry(response, div) {
 		<div class="center clearfix">
 			<h5><a href="/">Instaright - Perfect information for you in realtime.</a></h5>
                 <ul class="menu borderless clearfix"> 
+			<li><a href="/category" title="Instaright most populat category list"><span>Categories</span></a></li>
 			<li><a href="/tools" title="Instaright tools"><span>Tools</span></a></li>
                         {% if user %}
 			<li><a href="javascript:alert('Dashboard coming soon!');"><span>{{ user }}</span></a></li>
@@ -241,6 +238,7 @@ function updateDisplayEntry(response, div) {
                                                 margin:10px 0px 10px 0px;
                                                 padding:10px;
                                                 text-decoration:none;
+						height: 80px;
                                         }
                                 </style>
                                 <div id="stream"></div>
